add section header class

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 		"dev": "svelte-kit dev",
 		"build": "svelte-kit build",
 		"package": "svelte-kit package",
-		"prepare": "smui-theme compile build/smui.css -i src/theme",
+		"prepare": "smui-theme compile static/smui.css -i src/theme",
 		"preview": "svelte-kit preview",
 		"check": "svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
