--- a/package.json
+++ b/package.json
@@ -35,6 +35,9 @@
 	"type": "module",
 	"dependencies": {
 		"@smui/button": "^6.0.0-beta.4",
+		"@smui/icon-button": "^6.0.0-beta.4",
+		"@smui/snackbar": "^6.0.0-beta.4",
+		"@smui/textfield": "^6.0.0-beta.4",
 		"svelte-material-ui": "^6.0.0-beta.4"
 	}
 }
