--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
 	"dependencies": {
 		"@smui/button": "^6.0.0-beta.4",
 		"@smui/icon-button": "^6.0.0-beta.4",
+		"@smui/list": "^6.0.0-beta.4",
+		"@smui/menu": "^6.0.0-beta.4",
 		"@smui/snackbar": "^6.0.0-beta.4",
 		"@smui/textfield": "^6.0.0-beta.4",
 		"svelte-material-ui": "^6.0.0-beta.4"
