--- a/package.json
+++ b/package.json
@@ -35,10 +35,12 @@
 	"type": "module",
 	"dependencies": {
 		"@smui/button": "^6.0.0-beta.4",
+		"@smui/chips": "^6.0.0-beta.6",
 		"@smui/circular-progress": "^6.0.0-beta.6",
 		"@smui/icon-button": "^6.0.0-beta.4",
 		"@smui/list": "^6.0.0-beta.4",
 		"@smui/menu": "^6.0.0-beta.4",
+		"@smui/segmented-button": "^6.0.0-beta.6",
 		"@smui/snackbar": "^6.0.0-beta.4",
 		"@smui/textfield": "^6.0.0-beta.4",
 		"svelte-material-ui": "^6.0.0-beta.4"
