--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
 		"@smui/list": "^6.0.0-beta.4",
 		"@smui/menu": "^6.0.0-beta.4",
 		"@smui/segmented-button": "^6.0.0-beta.6",
+		"@smui/select": "^6.0.0-beta.7",
 		"@smui/snackbar": "^6.0.0-beta.4",
 		"@smui/textfield": "^6.0.0-beta.4",
 		"svelte-material-ui": "^6.0.0-beta.4"
