--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 		"@smui/icon-button": "^6.0.0-beta.4",
 		"@smui/list": "^6.0.0-beta.4",
 		"@smui/menu": "^6.0.0-beta.4",
+		"@smui/paper": "^6.0.0-beta.9",
 		"@smui/segmented-button": "^6.0.0-beta.6",
 		"@smui/select": "^6.0.0-beta.7",
 		"@smui/snackbar": "^6.0.0-beta.4",
