--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"@material/typography": "^13.0.0",
 		"@smui/top-app-bar": "^6.0.0-beta.4",
 		"@sveltejs/adapter-auto": "next",
+		"@sveltejs/adapter-vercel": "^1.0.0-next.32",
 		"@sveltejs/kit": "next",
 		"@typescript-eslint/eslint-plugin": "^4.31.1",
 		"@typescript-eslint/parser": "^4.31.1",
