--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
 		"@smui/snackbar": "^6.0.0-beta.4",
 		"@smui/textfield": "^6.0.0-beta.4",
 		"pg": "^8.7.1",
+		"pg-native": "^3.0.0",
 		"svelte-material-ui": "^6.0.0-beta.4"
 	}
 }
